Fixed flex-direction: column wrap; by separating them.

--- a/styles/modules/grid.module.scss
+++ b/styles/modules/grid.module.scss
@@ -51,7 +51,8 @@
 .col {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
   gap: 2%;
 }
 
